--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hitmarker",
   "main": "./lib/hitmarker",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Adds MLG hitmarkers to Atom.",
   "keywords": [],
   "repository": "https://github.com/alxgnon/atom-hitmarker",
@@ -10,6 +10,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
